2008-07-14  Jan Schmidt  <thaytan@noraisin.net>

	* ext/resindvd/gstmpegdemux.c:
	Remove whitespace line.

	* ext/resindvd/resindvdbin.c:
	* ext/resindvd/resindvdbin.h:
	Make it so that audio/video pads aren't added to the bin
	until after data flow starts.

	* ext/resindvd/resin-play:
	Move video buffer queue outside resindvdbin

	* ext/resindvd/resindvdsrc.c:
	Check that the nav_clock_id didn't already get unscheduled.

	* gst/dvdspu/gstdvdspu.c:
	Remove assert that sometimes triggers erroneously.

2008-07-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/greedyh.asm:
	Always use the C implementation if width is not a multiple of 4. The
	assembly optimized version only handle this and calling the C
	implementation for the remaining part doesn't work because it needs
	previous calculations.

2008-07-13  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/deinterlace2/tvtime/greedyh.asm:
	* gst/deinterlace2/tvtime/greedyh.c:
	* gst/deinterlace2/tvtime/greedyhmacros.h:
	Some cleanup, use 3DNOW instead of TDNOW in macros.

	* gst/deinterlace2/tvtime/tomsmocomp.c:
	(gst_deinterlace_method_tomsmocomp_class_init):
	* gst/deinterlace2/tvtime/tomsmocomp/TomsMoCompAll.inc:
	* gst/deinterlace2/tvtime/tomsmocomp/tomsmocompmacros.h:
	The SSE method in fact only needs MMXEXT, declare it as such.

2008-07-11  Jan Schmidt  <thaytan@noraisin.net>

	* docs/plugins/.cvsignore:
	Ignore *-undeclared.txt

	* ext/resindvd/rsnaudiomunge.c:
	Turn g_print's into debug statements.

	* ext/resindvd/resin-play:
	* ext/resindvd/Makefile.am:
	* ext/resindvd/resindvdbin.c:
	* ext/resindvd/resindvdbin.h:
	* ext/resindvd/rsnparsetter.c:
	* ext/resindvd/rsnparsetter.h:
	* ext/resindvd/rsnwrappedbuffer.c:
	* ext/resindvd/rsnwrappedbuffer.h:
	Add a bloated implementation of a really simple idea: Replace the
	pixel-aspect-ratio in the output video with a prescribed one when
	necessary. There must be an easier way.
